Update FE Ver 9.0

--- a/frontend-peer/src/components/Connections/Connection.css
+++ b/frontend-peer/src/components/Connections/Connection.css
@@ -4,7 +4,7 @@
 }
 
 .connection-button {
-  background-color: #4CAF50;
+  background-color: #2db732;
   color: white;
   padding: 12px 24px;
   font-size: 1.2em;
@@ -27,7 +27,7 @@
   margin-top: 20px;
   font-size: 1.2em;
   font-weight: bold;
-  color: #03910f;
+  color: #04a612;
   opacity: 1;
 
 }
