--- a/frontend-peer/src/index.css
+++ b/frontend-peer/src/index.css
@@ -3,15 +3,17 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient( #72b080, rgb(16, 92, 27));
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+  /* background: linear-gradient( #72b080, rgb(16, 92, 27)); */
   /* background: rgb(18, 70, 22); */
   /* background: linear-gradient(155deg, #54d65f, #205e10); */
-  backdrop-filter: blur(10px); /* Hiệu ứng làm mờ nền phía sau */
-  -webkit-backdrop-filter: blur(10px); /* Hỗ trợ cho Safari */
   width: 100%;
-  height: 1200px;
+  height: 100vh; 
+  background-image: url('../../frontend-peer/public/bg1.jpg');
+  background-size: cover;
+  background-position:center;
+  background-repeat:no-repeat;
 }
 
 code {
