--- a/frontend-tracker/src/App.css
+++ b/frontend-tracker/src/App.css
@@ -1,5 +1,11 @@
 .App {
-  text-align: center;
+    text-align: center;
+    width: 100%;
+    height: 130vh; 
+    background-image: url('../../frontend-peer/public/bg1.jpg');
+    background-size: cover;
+    background-position:center;
+    background-repeat:no-repeat;
 }
 
 .App-logo {
@@ -14,13 +20,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #07a414a6;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
